[package]
name = "accessmanager"
version = "2.0.0"
edition = "2021"

[dependencies]
scrypto = { version = "1.2.0" }
strum = "0.25"
strum_macros = "0.25"

[dev-dependencies]
scrypto-test = { version = "1.2.0" }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
# Set the package crate as its own empty workspace, to hide it from any potential ancestor workspace
# Remove this [workspace] section if you intend the package to be part of a Cargo workspace

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-bulk-memory-opt", "--enable-nontrapping-float-to-int"]
